# TrainCompany-tools

./: .editorconfig  .gitignore  .gitmodules  Dockerfile  README.md  README_DE.md  __init__.py  betriebsstellen_open_data.csv  cleanup.py  cli_utils.py  compact_json.py  convert_coordinates.py  convert_trasse.py  create_tasks.py  ensure_distances.py  export_station_list.py  fix_positions.py  haltestellen.CSV  import_brouter.py  import_stations.py  import_trassenfinder.bat  import_trassenfinder.py  import_trassenfinder.sh  importer.py  plot.py  print_path_suggestion.py  profile_loading.py  project_coordinates.py  requirements.txt  route_data.py  shift_station_coordinates.py  statistics.py  strecken.MID  test_location.py  test_twisting.py  transform_to_laea.py  transliterate.py  update_path_suggestions.py  validate_files.py
data/: README.md  betriebsstellen.csv  betriebsstellen_verzeichnis.csv  fr_acronyms.csv  fr_stations.csv  sbb_bahnhofsbenutzer.csv  sbb_platforms.csv  strecken.csv  us_stations.wiki
fast_spacing/: Cargo.toml  pyproject.toml
fast_spacing/.github/workflows/: CI.yml
fast_spacing/src/: lib.rs
geo/: __init__.py  location_data.py  overpass.py  photon_advanced_reverse.py
importers/: brouter.py  brouter_new.py  ch_bahnhofsbenutzer.py  ch_betriebsstellen.py  ch_platforms.py  db_bahnhoefe.py  db_bahnsteige.py  db_betriebsstellen.py  db_betriebsstellenverzeichnis.py  db_strecken.py  db_trassenfinder.py  ds_100_bot.py  fr_platforms.py  fr_stations.py  trainline.py  uk_platforms.py  uk_stations.py  us_stations.py
structures/: __init__.py  country.py  (+4 more)
(+10 files in other folders)
